start problems removed

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ ff5555
 							<textarea id="scale" onchange="changeURL();noPreset();" class="iosscrollable u-full-width" rows="12">! 31-ed2 Bosanquet Wilson Terpstra.scl
 ! 31-tone equal tempered scale consisting of 31 sonically equal divisions per frequency halving/doubling in standard meantone notation, mapped on a Bosanquet / Wilson / Terpstra layout.
 !
-Terpstra Keyboard WebApp | 31-ed2 Bosanquet / Wilson / Terpstra
+Temper | 31-ed2 Bosanquet / Wilson / Terpstra
 31
 !
 38.70968
