much better 31 EDO chord display

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<label>Display Settings</label>
 								<div class="control-group">
 									<label>
-										<input id="symbolic-chord-notation" type="checkbox" name="symbolic_chord_notation" value="fnord" onchange="changeURL();noPreset();">
+										<input id="full-chord-notation" type="checkbox" name="symbolic_chord_notation" value="fnord" onchange="changeURL();noPreset();">
 										<span class="label-body">Show Full Chord Names</span>
 									</label>
 								</div>
