--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<button type="button" class="tab-button" data-tab="layout">Layout & Display</button>
 					<button type="button" class="tab-button" data-tab="advanced">Advanced</button>
 					<button type="button" class="tab-button" data-tab="credits">Credits</button>
+					<button type="button" class="tab-button" data-tab="learning">Learning</button>
 				</div>
 
 				<!-- Audio Tab -->
@@ -340,6 +341,29 @@ Temper | 31-ed2 Bosanquet / Wilson / Terpstra
 					<div class="row">
 						<div class="container" style="text-align:center">
 							Hex layout by <a href="http://siementerpstra.com/" target="new">Siemen Terpstra</a> in the late 80s. Early web development by <a href="http://jamesfenn.com/" target="new">James Fenn</a> and <a href="http://brandlew.com/" target="new">Brandon Lewis</a>, <a href="http://whatmusicreallyis.com/" title="What Music Really İs" target="new">Bo Constantinsen</a> and <a href="https://sites.google.com/site/wangchengu/" target="new">Chengu Wang</a>. Current 2024-2025 version created and maintained by Peter Keay @rustopian. Credits to Scott Thompson and <a href="http://ozanyarman.com/" target="new">Dr Ozan Yarman</a> for contributing samples. Current version 2.0 (Jan. 2025), released as Free/Libre and Open Source Software under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="new">GPL-3.0</a>.
+						</div>
+					</div>
+				</div>
+
+				<!-- Learning Tab -->
+				<div id="learning" class="tab-content">
+					<div class="row">
+						<div class="one-half column">
+							<div class="learning-controls">
+								<label>Learning Functions</label>
+								<div class="control-group">
+									<label>Select Root Note</label>
+									<select id="learning-note-root" class="u-full-width">
+										<!-- Note names will be populated dynamically -->
+									</select>
+								</div>
+								<div class="control-group">
+									<label>Chords</label>
+									<ul id="chord-list">
+										<!-- Chords will be populated dynamically -->
+									</ul>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
