learn mode close

--- a/index.html
+++ b/index.html
@@ -448,6 +448,9 @@ Temper | 31-ed2 Bosanquet / Wilson / Terpstra
 									</select>
 								</div>
 								<div class="control-group">
+									<button type="button" class="button" onclick="window.clearLearningMode()">Clear Learning Mode</button>
+								</div>
+								<div class="control-group">
 									<label>Chords</label>
 									<ul id="chord-list">
 										<!-- Chords will be populated dynamically -->
