--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 									<option value="x">Front-to-Back Tilt (X-axis)</option>
 									<option value="z">Left-to-Right Tilt (Z-axis)</option>
 								</select>
+								<button type="button" id="calibrate_tilt" class="button" onclick="window.settingsManager.calibrateTiltFromSensor();" style="margin-top: 10px;">
+									Calibrate Current Tilt as Center
+								</button>
 							</div>
 						</div>
 					</div>
