--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@ Temper | 31-ed2 Bosanquet / Wilson / Terpstra
 
 	<img alt="Return to keyboard design" src="images/back.png" id="backButton" onclick="back()" style="display: none;">
 
-	<button id="release-all" class="release-all-button">Release All</button>
-	<button id="settings-button" class="settings-button">Settings</button>
+	<button id="release-all" class="release-all-button">⏹️</button>
+	<button id="settings-button" class="settings-button">⚙️</button>
 
 	<div id="chord-display" class="chord-display"></div>
 
