glissando mode checkbox

--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
 								<input id="toggle_mode" type="checkbox" name="toggle_mode" value="fnord" onchange="changeURL();noPreset();">
 								<span class="label-body">Toggle Mode (Click/tap to hold notes)</span>
 							</label>
+							<label>
+								<input id="glissando_mode" type="checkbox" name="glissando_mode" value="fnord" onchange="changeURL();noPreset();" checked>
+								<span class="label-body">Glissando Mode (Slide between notes)</span>
+							</label>
 							
 							<div class="control-group">
 								<label>
@@ -276,7 +280,7 @@
 
 								<div class="control-group">
 									<label>
-										<input id="no_labels" type="checkbox" name="blank_keys" value="fnord" onchange="hideRevealEnum();noPreset();">
+										<input id="no_labels" type="checkbox" name="blank_keys" value="" onchange="hideRevealEnum();noPreset();">
 										<span class="label-body">Blank Keys</span>
 									</label>
 								</div>
